2021 changes: stale projects, user defined tag management, other minor tweaks

--- a/EECIP/Content/Site.css
+++ b/EECIP/Content/Site.css
@@ -881,6 +881,10 @@ ul.main-navigation-menu > li.active > a {
 }
 
 
+/*.panel .table thead > tr > th {
+    background-color: #d2d2d2;
+}*/
+
 
 /*************************************************************************************************************************************************/
 /***********************FORUM STYLING ************************************************************************************************************/
