--- a/EECIP/Views/Admin/ExportData.cshtml
+++ b/EECIP/Views/Admin/ExportData.cshtml
@@ -58,6 +58,18 @@
                                             <input type="checkbox" name="exportdata" value="Likes" />
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td style="padding:5px;">User Defined Tags</td>
+                                        <td style="padding:5px;">
+                                            <input type="checkbox" name="exportdata" value="UserTags" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding:5px;">Stale Active Projects with Contacts</td>
+                                        <td style="padding:5px;">
+                                            <input type="checkbox" name="exportdata" value="StaleProjects" />
+                                        </td>
+                                    </tr>
 
                                 </table>
                             </div>
