--- a/EECIP/Views/Admin/RefTags.cshtml
+++ b/EECIP/Views/Admin/RefTags.cshtml
@@ -88,7 +88,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                    <h3 class="modal-tital">Edit Tag</h3>
+                    <h3 class="modal-title">Edit Tag</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
