--- a/EECIP/Views/Admin/RefEntServices.cshtml
+++ b/EECIP/Views/Admin/RefEntServices.cshtml
@@ -70,7 +70,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                    <h3 class="modal-tital">Edit Enterprise Service</h3>
+                    <h3 class="modal-title">Edit Enterprise Service</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
