--- a/EECIP/Views/Admin/SearchAdmin.cshtml
+++ b/EECIP/Views/Admin/SearchAdmin.cshtml
@@ -90,7 +90,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                    <h3 class="modal-tital">Add Synonym Rule</h3>
+                    <h3 class="modal-title">Add Synonym Rule</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
