--- a/EECIP/Views/Admin/Users.cshtml
+++ b/EECIP/Views/Admin/Users.cshtml
@@ -104,7 +104,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                    <h3 class="modal-tital">Add New User</h3>
+                    <h3 class="modal-title">Add New User</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
