--- a/EECIP/Views/Dashboard/Governance.cshtml
+++ b/EECIP/Views/Dashboard/Governance.cshtml
@@ -167,7 +167,7 @@ else
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                    <h3 class="modal-tital">New Governance Group</h3>
+                    <h3 class="modal-title">New Governance Group</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
